==> ericyanush/mbed/libraries/mbed/targets/hal/TARGET_STM/TARGET_STM32F3/can_api.c <==
#include "can_api.h"

void can_init(can_t* obj, PinName rd, PinName td) {
    initCan(obj, rd, td, 24, CAN_MODE_NORMAL);

    NVIC_SetVector(USB_HP_CAN_TX_IRQn, (uint32_t)&TX_IRQHandler);
    NVIC_SetVector(USB_LP_CAN_RX0_IRQn, (uint32_t)&RX0_IRQHandler);
    NVIC_SetVector(CAN_RX1_IRQn, (uint32_t)&RX1_IRQHandler);
    NVIC_EnableIRQ(USB_HP_CAN_TX_IRQn);
    NVIC_EnableIRQ(USB_LP_CAN_RX0_IRQn);
    NVIC_EnableIRQ(CAN_RX1_IRQn);

    __HAL_CAN_ENABLE_IT(&obj->handle, CAN_IT_FMP0);
    __HAL_CAN_ENABLE_IT(&obj->handle, CAN_IT_FMP1);
    __HAL_CAN_ENABLE_IT(&obj->handle, CAN_IT_TME);
}

void can_free(can_t* obj) {
    HAL_CAN_DeInit(&(obj->handle));
}

int can_frequency(can_t* obj, int hz) {
    //The bit timing register is protected, so we need to put the device
    //  into init mode again to be able to modify the frequency
    uint32_t prescale;
    switch(hz) {
        case 10000:
            prescale = 300;
            break;
        case 20000:
            prescale = 150;
            break;
        case 50000:
            prescale = 60;
            break;
        case 100000:
            prescale = 30;
            break;
        case 125000:
            prescale = 24;
            break;
        case 250000:
            prescale = 12;
            break;
        case 500000:
            prescale = 6;
            break;
        case 1000000:
            prescale = 3;
            break;
        default:
            //We don't support any other speeds
            return 0;
    }
    //De-init the bus
    can_free(obj);
    //Initialize the bus with the new frequency
    initCan(obj, obj->rxPin, obj->txPin, prescale, obj->handle.Init.Mode);
    return 1;
}

int can_write(can_t* obj, CAN_Message msg, int cc) {
    obj->txMsg.StdId = msg.id;
    if (msg.format == CANExtended || msg.format == CANAny) {
        obj->txMsg.IDE = CAN_ID_EXT;
        obj->txMsg.ExtId = msg.id;
        obj->txMsg.StdId = 0;
    }
    else {
        obj->txMsg.ExtId = CAN_ID_STD;
        obj->txMsg.IDE = 0;
    }
    obj->txMsg.DLC = msg.len;
    obj->txMsg.RTR = msg.type;

    for (uint8_t i = 0; i < msg.len; i++) {
        obj->txMsg.Data[i] = msg.data[i];
    }
    //Clear out any extraneous data
    for (uint8_t i = msg.len; i < 8; i++) {
        obj->txMsg.Data[i] = 0;
    }
    return CAN_Transmit(&obj->handle);
}

int can_read(can_t* obj,CAN_Message* msg, int handle) {
    if (obj->rxMsgPending) {
        msg->format = obj->rxMsg.IDE == CAN_ID_EXT ? CANExtended : CANStandard;
        msg->type = obj->rxMsg.RTR ? CANRemote : CANData;
        msg->id = obj->rxMsg.IDE == CAN_ID_EXT ? obj->rxMsg.ExtId : obj->rxMsg.StdId;
        for (int i = 0; i < 8; i++) {
            msg->data[i] = obj->rxMsg.Data[i];
        }
        msg->len = obj->rxMsg.DLC;
        obj->rxMsgPending = 0;
        return 1;
    }
    return 0;
}

void can_reset(can_t* obj) {
    can_free(obj);
    initCan(obj, obj->rxPin, obj->txPin, obj->handle.Init.Prescaler, obj->handle.Init.Mode);
}

void can_monitor(can_t* obj, int silent) {
    if (silent && (obj->handle.Init.Mode != CAN_MODE_LOOPBACK)) {
        can_free(obj);
        initCan(obj, obj->rxPin, obj->txPin, obj->handle.Init.Prescaler, CAN_MODE_LOOPBACK);
    }
    else if (!silent && (obj->handle.Init.Mode != CAN_MODE_NORMAL)) {
        can_free(obj);
        initCan(obj, obj->rxPin, obj->txPin, obj->handle.Init.Prescaler, CAN_MODE_NORMAL);
    }
}
